--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -1,1 +1,50 @@
-<p>login works!</p>
+<div class="background">
+    <div id="mydivon" style="display:block">
+        <div class="text">
+            <h1>Login..</h1>
+            <p>No Account? <a href="#mydivoff" onmousedown="toggleDiv('mydiv');">Signup</a></p>
+        </div>
+        <div class="box">
+            <form class="form">
+                <input type="text" class="username" placeholder="Username" required>
+                <input type="password" class="password" placeholder="Password" required>
+                <input type="submit" class="button" value="Login">
+            </form>
+        </div>
+    </div>
+    <div id="mydivoff" style="display:none">
+        <div class="text">
+            <h1>Signup..</h1>
+            <p>Have Account? <a href="#mydivon" onmousedown="toggleDiv('mydiv');">Login</a></p>
+        </div>
+        <div class="box1">
+            <form class="form">
+                <input type="text" class="fullname" placeholder="Full Name" required>
+                <input type="email" class="email" placeholder="someone@abc.com" required>
+                <input type="text" class="username" placeholder="Username" required>
+                <input type="password" class="password" placeholder="Password" required>
+                <input type="submit" class="button" value="Login">
+            </form>
+        </div>
+    </div>
+    </div>
+    <script>
+        function toggleDiv(divid)
+  {
+ 
+    varon = divid + 'on';
+    varoff = divid + 'off';
+ 
+    if(document.getElementById(varon).style.display == 'block')
+    {
+        document.getElementById(varon).style.display = 'none';
+        document.getElementById(varoff).style.display = 'block';
+    }
+   
+    else
+    {  
+        document.getElementById(varoff).style.display = 'none';
+        document.getElementById(varon).style.display = 'block'
+    }
+}
+    </script>
