--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -5,7 +5,7 @@
             <p>No Account? <a href="#mydivoff" onmousedown="toggleDiv('mydiv');">Signup</a></p>
         </div>
         <div class="box">
-            <form class="form" #regForm='ngForm' (ngSubmit="Register1(regForm)">
+            <form class="form" #regForm='ngForm' (ngSubmit)="Register1(regForm)">
                 <input type="text" class="username" placeholder="Username" required>
                 <input type="password" class="password" placeholder="Password" required>
                 <input type="submit" class="button" value="Login">
@@ -18,7 +18,7 @@
             <p>Have Account? <a href="#mydivon" onmousedown="toggleDiv('mydiv');">Login</a></p>
         </div>
         <div class="box1">
-            <form class="form" #regForm='ngForm' (ngSubmit="Register2(regForm)">
+            <form class="form" #regForm='ngForm' (ngSubmit)="Register2(regForm)">
                 <input type="text" class="fullname" placeholder="Full Name" required ngModel>
                 <input type="email" class="email" placeholder="someone@abc.com" required ngModel>
                 <input type="text" class="username" placeholder="Username" required ngModel>
