--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-
-<router-outlet> <app-login></app-login> </router-outlet>
-<app-menu></app-menu>
+<app-login></app-login>
+<router-outlet>  </router-outlet>
