--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -5,10 +5,11 @@
             <p>No Account? <a href="#mydivoff" onmousedown="toggleDiv('mydiv');">Signup</a></p>
         </div>
         <div class="box">
-            <form class="form" #regForm='ngForm' (ngSubmit)="Register1(regForm)">
-                <input type="text" class="username" placeholder="Username" required>
-                <input type="password" class="password" placeholder="Password" required>
-                <input type="submit" class="button" value="Login">
+            <form class="form"  #logForm="ngForm">
+                <input class="input-field" type="text" placeholder="Email" name="userId" id="userId" [(ngModel)]="user.email">
+                <input class="input-field" type="password" placeholder="Password" name="password" id="password"
+                [(ngModel)]="user.password">
+                <button type="submit" (click)="gotoLogin()" class="btn">Login</button>
             </form>
         </div>
     </div>
@@ -18,13 +19,13 @@
             <p>Have Account? <a href="#mydivon" onmousedown="toggleDiv('mydiv');">Login</a></p>
         </div>
         <div class="box1">
-            <form class="form" #regForm='ngForm' (ngSubmit)="Register2(regForm)">
+            <!-- <form class="form" #regForm='ngForm' (ngSubmit)="Register2(regForm)">
                 <input type="text" class="fullname" placeholder="Full Name" required ngModel>
                 <input type="email" class="email" placeholder="someone@abc.com" required ngModel>
                 <input type="text" class="username" placeholder="Username" required ngModel>
                 <input type="password" class="password" placeholder="Password" required ngModel>
                 <input type="submit" class="button" value="Login">
-            </form>
+            </form> -->
         </div>
     </div>
 </div>
