--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -1,7 +1,4 @@
-<<<<<<< Updated upstream
-<p>Home works</p>
-=======
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">WebSiteName</a>
@@ -15,15 +12,7 @@
         <div class="collapse navbar-collapse" id="mNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Sales</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                      Service<span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/HTML/query.html">Query related</a></li>
-                      <li><a href="/HTML/feedback.html">Customer Feedback</a></li>
-                    </ul>
-                </li>
+               
 
                 <li><a href="#">Complain</a></li>
                 <li><a href="#">Feedback</a></li>
@@ -42,14 +31,14 @@
              </form>
         </div> 
     </div>
-</nav>
+</nav> -->
 
     <div class="container-fluid" style="padding: 20px;">
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="#" target="_blank">
-                        <img src="imgs/iphone.jpg" alt="iphone" style="height:250px;width:100%;">
+                        <img src="assets/iphone.jpg" alt="iphone" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center">
                             <p>iphone</p>
                         </div>
@@ -60,7 +49,7 @@
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="#" target="_blank">
-                        <img src="imgs/laptop.jpg" alt="laptop" style="height:250px;width:100%;">
+                        <img src="/assets/laptop.jpg" alt="laptop" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center" >
                             <p>Mac book</p>
                         </div>
@@ -71,7 +60,7 @@
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="#" target="_blank">
-                        <img src="imgs/iwatch.jpg" alt="iwatch" style="height:250px;width:100%;">
+                        <img src="/assets/iwatch.jpg" alt="iwatch" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center">
                             <p>iwatch</p>
                         </div>
@@ -85,4 +74,3 @@
     contact us - 92113624t323   <a href="mailto:abs@12.com">abc@12.com</a>
   </p>
 </div>
->>>>>>> Stashed changes
