--- a/src/app/Component/FeedbackForm/feedbackform.component.html
+++ b/src/app/Component/FeedbackForm/feedbackform.component.html
@@ -1,1 +1,44 @@
-<p>feedbackform works!</p>
+<div class="container">
+    <h2 class="text-center">Feedback form</h2><br>
+    <form class="form-horizontal" action="/action_page.php">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="name">User name:</label>
+            <div class="col-sm-7">
+                <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
+            </div>
+        </div>
+
+        <div class="form-group">
+          <label  class="control-label col-sm-2" for="contactno" >Contact number:</label>
+          <div class="col-sm-6">          
+            <input type="number" class="form-control" id="contactno" placeholder="Enter contact number" name="contactno">
+          </div>
+        </div>
+
+        <div class="form-group">        
+          <label class="control-label col-sm-2" for="rate">Rate Service:</label>
+          <div class="col-sm-6">
+            <input type="range" id="vol" name="vol" min="0" max="5">
+          </div>
+        
+          <div class="col-sm-8">
+            (Rate between 1 and 5),
+            1 being the least and 5 being the highest    
+          </div>
+        </div>
+                
+
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="succ" >Suggestion:</label>
+          <div class="col-sm-7">          
+            <textarea type="text" class="form-control" rows="4" required></textarea>
+          </div>
+        </div>
+
+        <div class="form-group">        
+          <div class="control-label col-sm-6">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </form>
+    </div>
