--- a/src/app/Component/menu/menu.component.html
+++ b/src/app/Component/menu/menu.component.html
@@ -12,6 +12,15 @@
          <ul class="nav navbar-nav">
             <li class="active"><a [routerLink]="['/home']">Home</a></li>
             <li><a   [routerLink]="['/service']">Service</a></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                Service<span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="/HTML/query.html">Query related</a></li>
+                <li><a href="/HTML/feedback.html">Customer Feedback</a></li>
+              </ul>
+          </li>
             <li><a [routerLink]="['/complain']" >Complain</a></li>
             <li><a  [routerLink]="['/feedback']">Feedback</a></li>
          </ul>
