--- a/src/app/Component/FeedbackForm/feedbackform.component.html
+++ b/src/app/Component/FeedbackForm/feedbackform.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <div class="container">
     <h2 class="text-center">Feedback form</h2><br>
     <form class="form-horizontal" action="/action_page.php">
