--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-inverse">
+<app-menu></app-menu>
+
+<!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">WebSiteName</a>
@@ -39,14 +41,13 @@
              </form>
         </div> 
     </div>
-</nav>
-
+</nav> -->
     <div class="container-fluid" style="padding: 20px;">
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="#" target="_blank">
-                        <img src="imgs/iphone.jpg" alt="iphone" style="height:250px;width:100%;">
+                        <img src="assets/iphone.jpg" alt="iphone" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center">
                             <p>iphone</p>
                         </div>
@@ -57,7 +58,7 @@
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="#" target="_blank">
-                        <img src="imgs/laptop.jpg" alt="laptop" style="height:250px;width:100%;">
+                        <img src="assets/laptop.jpg" alt="laptop" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center" >
                             <p>Mac book</p>
                         </div>
@@ -68,7 +69,7 @@
             <div class="col-md-4">
                 <div class="thumbnail">
                     <a href="#" target="_blank">
-                        <img src="imgs/iwatch.jpg" alt="iwatch" style="height:250px;width:100%;">
+                        <img src="assets/iwatch.jpg" alt="iwatch" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center">
                             <p>iwatch</p>
                         </div>
