--- a/src/app/Component/complain/complain.component.html
+++ b/src/app/Component/complain/complain.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <h2 class="text-center">Complaint registration form</h2>
     <form class="form-horizontal">
       <div class="col-sm-6">
