--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -46,7 +46,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="#" target="_blank">
+                    <a target="_blank">
                         <img src="assets/iphone.jpg" alt="iphone" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center">
                             <p>iphone</p>
@@ -57,7 +57,7 @@
 
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="#" target="_blank">
+                    <a target="_blank">
                         <img src="assets/laptop.jpg" alt="laptop" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center" >
                             <p>Mac book</p>
@@ -68,7 +68,7 @@
 
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <a href="#" target="_blank">
+                    <a target="_blank">
                         <img src="assets/iwatch.jpg" alt="iwatch" style="height:250px;width:100%;">
                         <div class="caption" style="text-align:center">
                             <p>iwatch</p>
