--- a/src/app/Component/complain/complain.component.html
+++ b/src/app/Component/complain/complain.component.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Customer Name</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.custName">
+            <input type="text" class="form-control" [(ngModel)]="complainA.CustomerName">
           </div>
         </div>
     
@@ -14,7 +14,7 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Customer Email ID</label>
           <div class="col-sm-8">
-            <input type="email" class="form-control" [(ngModel)]="complainA.custEmail">
+            <input type="email" class="form-control" [(ngModel)]="complainA.mail">
           </div>
         </div>
       </div>
@@ -23,14 +23,14 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Product Name</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.pName">
+            <input type="text" class="form-control" [(ngModel)]="complainA.productName">
           </div>
         </div>
     
         <div class="form-group">
           <label class="control-label col-sm-4">Product ID</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.pId">
+            <input type="text" class="form-control" [(ngModel)]="complainA.productId">
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
         <div class="form-group">
           <label class="col-sm-4 control-label" for="phone">Contact Number</label>
           <div class="col-sm-8">
-            <input type="text" name="country_code" class="form-control" pattern="[1-9]{1}[0-9]{9}" [(ngModel)]="complainA.cNumber" >
+            <input type="text" name="country_code" class="form-control" pattern="[1-9]{1}[0-9]{9}" [(ngModel)]="complainA.Contact" >
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="form-group">
           <label class="col-sm-4 control-label">Repair/Replacement/Refund</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.replace">
+            <input type="text" class="form-control" [(ngModel)]="complainA.Repair">
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <div class="form-group">
           <label class="control-label col-sm-2">Complaint InDetail</label>
           <div class="col-sm-10">
-            <textarea type="text" class="form-control" rows="4" [(ngModel)]="complainA.cInDetail"></textarea>
+            <textarea type="text" class="form-control" rows="4" [(ngModel)]="complainA.Complain"></textarea>
           </div>
         </div>
       </div>
