--- a/src/app/Component/FeedbackForm/feedbackform.component.html
+++ b/src/app/Component/FeedbackForm/feedbackform.component.html
@@ -2,25 +2,25 @@
 
 <div class="container">
     <h2 class="text-center">Feedback form</h2><br>
-    <form class="form-horizontal" action="/action_page.php">
+    <form class="form-horizontal" action="/action_page.php" #jogForm="ngForm">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">User name:</label>
             <div class="col-sm-7">
-                <input type="name" class="form-control" id="name" placeholder="Enter name" name="name">
+                <input type="name" class="form-control" id="name" placeholder="Enter name" name="name" [(ngModel)]="user.name">
             </div>
         </div>
 
         <div class="form-group">
           <label  class="control-label col-sm-2" for="contactno" >Contact number:</label>
           <div class="col-sm-6">          
-            <input type="number" class="form-control" id="contactno" placeholder="Enter contact number" name="contactno">
+            <input type="number" class="form-control" id="contactno" placeholder="Enter contact number" name="contactno" [(ngModel)]="user.cNumber">
           </div>
         </div>
 
         <div class="form-group">        
           <label class="control-label col-sm-2" for="rate">Rate Service:</label>
           <div class="col-sm-6">
-            <input type="range" id="vol" name="vol" min="0" max="5">
+            <input type="range" id="vol" name="vol" min="0" max="5" [(ngModel)]="user.rate">
           </div>
         
           <div class="col-sm-8">
@@ -33,13 +33,13 @@
         <div class="form-group">
           <label class="control-label col-sm-2" for="succ" >Suggestion:</label>
           <div class="col-sm-7">          
-            <textarea type="text" class="form-control" rows="4" required></textarea>
+            <textarea type="text" class="form-control" rows="4" required [(ngModel)]="user.suggestion"></textarea>
           </div>
         </div>
 
         <div class="form-group">        
           <div class="control-label col-sm-6">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" (click)="gotoLogin()">Submit</button>
           </div>
         </div>
       </form>
