--- a/src/app/Component/complain/complain.component.html
+++ b/src/app/Component/complain/complain.component.html
@@ -1,12 +1,12 @@
 <app-menu></app-menu>
 
 <h2 class="text-center">Complaint registration form</h2>
-    <form class="form-horizontal" #kogForm="ngForm">
+    <form class="form-horizontal" >
       <div class="col-sm-6">
         <div class="form-group">
           <label class="control-label col-sm-4">Customer Name</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.CustomerName">
+            <input type="text" class="form-control" >
           </div>
         </div>
     
@@ -14,7 +14,7 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Customer Email ID</label>
           <div class="col-sm-8">
-            <input type="email" class="form-control" [(ngModel)]="complainA.mail">
+            <input type="email" class="form-control" >
           </div>
         </div>
       </div>
@@ -23,14 +23,14 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Product Name</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.productName">
+            <input type="text" class="form-control" >
           </div>
         </div>
     
         <div class="form-group">
           <label class="control-label col-sm-4">Product ID</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.productId">
+            <input type="text" class="form-control">
           </div>
         </div>
       </div>
@@ -39,7 +39,7 @@
         <div class="form-group">
           <label class="control-label col-sm-2">Partner Address</label>
           <div class="col-sm-10">
-            <textarea type="text" class="form-control" rows="2" [(ngModel)]="complainA.pAdress"></textarea>
+            <textarea type="text" class="form-control" rows="2" ></textarea>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
         <div class="form-group">
           <label class="col-sm-4 control-label" for="phone">Contact Number</label>
           <div class="col-sm-8">
-            <input type="text" name="country_code" class="form-control" pattern="[1-9]{1}[0-9]{9}" [(ngModel)]="complainA.Contact" >
+            <input type="text" name="country_code" class="form-control" pattern="[1-9]{1}[0-9]{9}">
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="form-group">
           <label class="col-sm-4 control-label">Repair/Replacement/Refund</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" [(ngModel)]="complainA.Repair">
+            <input type="text" class="form-control" >
           </div>
         </div>
       </div>
@@ -68,14 +68,14 @@
         <div class="form-group">
           <label class="control-label col-sm-2">Complaint InDetail</label>
           <div class="col-sm-10">
-            <textarea type="text" class="form-control" rows="4" [(ngModel)]="complainA.Complain"></textarea>
+            <textarea type="text" class="form-control" rows="4"></textarea>
           </div>
         </div>
       </div>
 
     
       <div class="text-center">
-        <button class="btn btn-primary waves-effect waves-light " id="btn-submit" (click)=goToSubmit() >SUBMIT</button>
+        <button class="btn btn-primary waves-effect waves-light " id="btn-submit"  >SUBMIT</button>
       </div>
       <input type="hidden" name="action" id="action" value="event_dialog_add_newpartnerdata" />
     </form>
