--- a/src/app/Component/FeedbackForm/feedbackform.component.html
+++ b/src/app/Component/FeedbackForm/feedbackform.component.html
@@ -6,21 +6,21 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">User name:</label>
             <div class="col-sm-7">
-                <input type="name" class="form-control" id="name" placeholder="Enter name" name="name" >
+                <input type="name" class="form-control" id="name" placeholder="Enter name" name="name"(input)='inputA($event)' >
             </div>
         </div>
 
         <div class="form-group">
           <label  class="control-label col-sm-2" for="contactno" >Contact number:</label>
           <div class="col-sm-6">          
-            <input type="number" class="form-control" id="contactno" placeholder="Enter contact number" name="contactno" >
+            <input type="number" class="form-control" id="contactno" placeholder="Enter contact number" name="contactno" (input)='inputB($event)'>
           </div>
         </div>
 
         <div class="form-group">        
           <label class="control-label col-sm-2" for="rate">Rate Service:</label>
           <div class="col-sm-6">
-            <input type="range" id="vol" name="vol" min="0" max="5" >
+            <input type="range" id="vol" name="vol" min="0" max="5" (input)='inputC($event)'>
           </div>
         
           <div class="col-sm-8">
@@ -33,13 +33,14 @@
         <div class="form-group">
           <label class="control-label col-sm-2" for="succ" >Suggestion:</label>
           <div class="col-sm-7">          
-            <textarea type="text" class="form-control" rows="4" required ></textarea>
+            <textarea type="text" class="form-control" rows="4" required (input)='inputD($event)'></textarea>
           </div>
         </div>
 
         <div class="form-group">        
           <div class="control-label col-sm-6">
-            <button type="submit" class="btn btn-primary" >Submit</button>
+            <button type="submit" class="btn btn-primary" (click)='sub()'>Submit</button>
+           
           </div>
         </div>
       </form>
