--- a/src/app/Component/complain/complain.component.html
+++ b/src/app/Component/complain/complain.component.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Customer Name</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" >
+            <input type="text" class="form-control" (input)='inputA($event)'>
           </div>
         </div>
     
@@ -14,7 +14,7 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Customer Email ID</label>
           <div class="col-sm-8">
-            <input type="email" class="form-control" >
+            <input type="email" class="form-control" (input)='inputB($event)'>
           </div>
         </div>
       </div>
@@ -23,14 +23,14 @@
         <div class="form-group">
           <label class="control-label col-sm-4">Product Name</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" >
+            <input type="text" class="form-control" (input)='inputC($event)'>
           </div>
         </div>
     
         <div class="form-group">
           <label class="control-label col-sm-4">Product ID</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control"(input)='inputD($event)'>
           </div>
         </div>
       </div>
@@ -39,7 +39,7 @@
         <div class="form-group">
           <label class="control-label col-sm-2">Partner Address</label>
           <div class="col-sm-10">
-            <textarea type="text" class="form-control" rows="2" ></textarea>
+            <textarea type="text" class="form-control" rows="2" (input)='inputE($event)'></textarea>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
         <div class="form-group">
           <label class="col-sm-4 control-label" for="phone">Contact Number</label>
           <div class="col-sm-8">
-            <input type="text" name="country_code" class="form-control" pattern="[1-9]{1}[0-9]{9}">
+            <input type="text" name="country_code" class="form-control" pattern="[1-9]{1}[0-9]{9}" (input)='inputF($event)'>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="form-group">
           <label class="col-sm-4 control-label">Repair/Replacement/Refund</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" >
+            <input type="text" class="form-control" (input)='inputG($event)'>
           </div>
         </div>
       </div>
@@ -68,14 +68,14 @@
         <div class="form-group">
           <label class="control-label col-sm-2">Complaint InDetail</label>
           <div class="col-sm-10">
-            <textarea type="text" class="form-control" rows="4"></textarea>
+            <textarea type="text" class="form-control" rows="4" (input)='inputH($event)'></textarea>
           </div>
         </div>
       </div>
 
     
       <div class="text-center">
-        <button class="btn btn-primary waves-effect waves-light " id="btn-submit"  >SUBMIT</button>
+        <button class="btn btn-primary waves-effect waves-light " id="btn-submit" (click)='sub()' >SUBMIT</button>
       </div>
       <input type="hidden" name="action" id="action" value="event_dialog_add_newpartnerdata" />
     </form>
