--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -2,7 +2,7 @@
     <div id="mydivon" style="display:block">
         <div class="text">
             <h1>Login..</h1>
-            <p>No Account? <a href="#mydivoff" onmousedown="toggleDiv('mydiv');">Signup</a></p>
+            <p>No Account? <a [routerLink]="['/signup']" onmousedown="toggleDiv('mydiv');">Signup</a></p>
         </div>
         <div class="box">
             <form class="form"  #logForm="ngForm">
@@ -13,10 +13,10 @@
             </form>
         </div>
     </div>
-    <div id="mydivoff" style="display:none">
+    <div style="display:none">
         <div class="text">
             <h1>Signup..</h1>
-            <p>Have Account? <a href="#mydivon" onmousedown="toggleDiv('mydiv');">Login</a></p>
+            <p>Have Account? <a [routerLink]="['/signup']" onmousedown="toggleDiv('mydiv');">Login</a></p>
         </div>
         <div class="box1">
             <!-- <form class="form" #regForm='ngForm' (ngSubmit)="Register2(regForm)">
