--- a/src/app/Component/signup/signup.component.html
+++ b/src/app/Component/signup/signup.component.html
@@ -1,1 +1,27 @@
-<p>signup works!</p>
+<form #myForm=ngForm>
+    <div class="form-group">
+      <label>First Name</label>
+      <input type="string" class="form-control" placeholder="Enter email" name="FirstName" ngModel>
+    </div>
+    <div class="form-group">
+        <label>Last Name</label>
+        <input type="string" class="form-control" placeholder="Enter email" name="LastName" ngModel>
+      </div>
+    <div class="form-group">
+        <label >Mobile No.</label>
+        <input type="number" class="form-control" placeholder="Enter email" name="Mobile" ngModel>
+    </div>
+    
+    <div class="form-group">
+        <label>Email</label>
+        <input type="email" class="form-control"  placeholder="Enter email" name="Email" ngModel>
+        
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" class="form-control" placeholder="Password" ngModel>
+      </div>
+      
+        
+    <button type="submit" class="btn btn-primary" (click)="addUser(myForm.value)">Submit</button>
+  </form>
